# napari-demo-assistant

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
src/napari_demo_assistant/: __init__.py  _overlay.py  _recorder.py  _widget.py  napari.yaml
